--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <a href="/" class="d-flex align-items-center text-decoration-none me-5">
           <i class="bi bi-earbuds fs-4"></i>
         </a>
-        <a href="/" class="d-flex align-items-center text-decoration-none me-5 fs-4">projects</a>
+        <!-- <a href="/" class="d-flex align-items-center text-decoration-none me-5 fs-4">projects</a> -->
       </header>
     
       <main>
         <h1 class="text-white fw-bold display-1">saucrio</h1>
         <p class="fs-5 col-md-8 text-secondary">18 year old <b>software developer</b> based in <b>Iași, Romania</b>.</p>
-        <p><a href="/"><i class="bi bi-github me-3 fs-5"></i></a>
-        <a href="/"><i class="bi bi-discord fs-5"></i></a></p>
+        <p><a href="https://github.com/saucrio"><i class="bi bi-github me-3 fs-5"></i></a>
+        <a href="https://discord.com/users/874991736177430570"><i class="bi bi-discord fs-5"></i></a></p>
         <hr class="col-3 col-md-2 mb-5">
         <p class="text-white">
         <i class="bi bi-clock me-2 fs-5"></i><br>
