--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       a:hover {
         color: #0DCAF0;
       }
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        text-align: center;
+      }
     </style>
     <div class="col-lg-6 mx-auto p-3 py-md-5" style="margin-top: 50px;">
       <header class="d-flex align-items-center pb-5 mb-5">
@@ -41,15 +49,31 @@
         <h1 class="text-white fw-bold display-1">saucrio</h1>
         <p class="fs-5 col-md-8 text-secondary">18 year old <b>software developer</b> based in <b>Iași, Romania</b>.</p>
         <p><a href="https://github.com/saucrio"><i class="bi bi-github me-3 fs-5"></i></a>
-        <a href="https://discord.com/users/874991736177430570"><i class="bi bi-discord fs-5"></i></a></p>
+        <a href="https://discord.com/users/874991736177430570"><i class="bi bi-discord fs-5 me-3"></i></a><a href="dsc.bio/saucrio"><i class="bi bi-link-45deg fs-5"></i></a></p>
         <hr class="col-3 col-md-2 mb-5">
-        <p class="text-white">
-        <i class="bi bi-clock me-2 fs-5"></i><br>
+        <p class="text-white fs-5">
+        <i class="bi bi-clock me-2 fs-5"></i><span id="todaysDate"></span><br>
         <!-- <i class="bi bi-clouds me-2 fs-5"></i> -->
         </p>
       </main>
     </div>
-  
+    <footer class="footer">
+        <span class="text-muted">© saucrio 2021</span>
+    </footer>
+    <script>
+      function doDate() {
+        var str = "";
+
+        var days = new Array("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday");
+        var months = new Array("January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December");
+
+        var now = new Date();
+
+        str += days[now.getDay()] + ", " + now.getDate() + " " + months[now.getMonth()] + " " + now.getFullYear() + " • " + now.getHours() +":" + now.getMinutes() + ":" + now.getSeconds();
+        document.getElementById("todaysDate").innerHTML = str;
+      }
+      setInterval(doDate, 100);
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
